# cutcell

./: .gitignore  3dairfoil.py  CMakeLists.txt  INSTALL  IntersectionTest.cpp  UnionTest.cpp  cutcell.cpp  cutcell.ui  cutcellcli.cpp  cutcellgui.cpp  cutcelltest.cpp  make_cube_3.cpp  report.bib  report.tex  simplePH.cpp  testcase.cpp  visualization_SNC.cpp
debian/: changelog  control  copyright
include/: cutcell.hpp  cutcellgui.hpp
